start lec8